<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giridhar.restosmart.ManagerStartupScreen">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/radioGroup"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="53dp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/beveragescategory"
            android:text="@string/beverages"
            android:fontFamily="monospace"
            android:textStyle="normal"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/appetizercategory"
            android:text="@string/appetizers"
            android:fontFamily="monospace"
            android:textStyle="normal"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/soupssaladcategory"
            android:text="@string/SandS"
            android:fontFamily="monospace"
            android:textStyle="normal"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/entreecategory"
            android:text="@string/entree"
            android:fontFamily="monospace"
            android:textStyle="normal"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dessertscategory"
            android:text="@string/dessert"
            android:fontFamily="monospace"
            android:textStyle="normal"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_marginStart="18dp"
        android:layout_marginTop="39dp"
        android:text="@string/choosecategory"
        android:fontFamily="monospace"
        android:textStyle="normal"
        android:textSize="15sp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView24"
        android:layout_alignStart="@+id/textView24" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/spinner"
        android:layout_alignStart="@+id/textView25" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView21"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="11dp"
        android:text="@string/subcategory"
        android:fontFamily="monospace"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner2"
        android:layout_alignStart="@+id/textView24"
        android:layout_marginBottom="28dp"
        android:text="@string/item"
        android:fontFamily="monospace"
        android:textStyle="normal"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:text="@string/fetch" />

</RelativeLayout>
