<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giridhar.restosmart.RegistrationActivity">

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/mailid"
        android:fontFamily="monospace"/>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pwd"
        android:fontFamily="monospace"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:text="@string/register"
        android:background="@drawable/solid_editext"
        android:textColor="#2962FF"
        android:fontFamily="monospace"/>
</RelativeLayout>
