<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giridhar.restosmart.LoginActivity">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="116dp"
        android:text="@string/mailid"
        android:fontFamily="monospace"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignStart="@+id/loginButton" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="164dp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:text="@string/pwd"
        android:fontFamily="monospace"
        android:textSize="15sp"
        android:layout_above="@+id/loginButton"
        android:layout_alignStart="@+id/textView20" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:ems="10"
        android:padding="10dp"
        android:inputType="textPassword"
        android:layout_alignBottom="@+id/textView22"
        android:layout_alignStart="@+id/editText4" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/noaccount"
        android:fontFamily="monospace"
        android:clickable="true"
        android:textSize="15sp"/>
</RelativeLayout>
