<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giridhar.restosmart.InvoiceBillActivity"
    android:background="@drawable/custom_border_invoice">


    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/restaurantName"
        android:fontFamily="monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView33"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/restaurantAddress"
        android:fontFamily="monospace"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView34"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/restaurantNumber"
        android:fontFamily="monospace"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/servedBy"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:layout_below="@+id/textView36"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tablename"
        android:fontFamily="monospace"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/textView38"
        android:layout_alignBottom="@+id/textView38"
        android:layout_alignEnd="@+id/textView34" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView38"
        android:layout_below="@+id/textView38"
        android:layout_marginTop="28dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView42"
        android:layout_alignStart="@+id/textView39"
        android:layout_marginStart="10dp"
        android:text="TextView" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_below="@+id/textView43"
        android:id="@+id/view5" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:text="TextView" />

    <ListView
        android:id="@+id/listOffinalItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/view5"
        android:layout_above="@+id/textView49" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_above="@+id/textView49"
        android:id="@+id/view6" />


</RelativeLayout>
